--- a/css/colors/default.css
+++ b/css/colors/default.css
@@ -1,13 +1,18 @@
 /*
 .main_menu .navbar-default .navbar-collapse .navbar-nav li:hover a, .main_menu .navbar-default .navbar-collapse .navbar-nav li.active a {
-	color: #44dd61;
+	
+	color: #27a79a;
 }
+
 .main_menu .navbar-default .navbar-collapse .navbar-nav li a::before {
-	background: #44dd61;
+	background: #27a79a;
 }
+
 .main_menu .navbar-default .navbar-collapse .navbar-nav li.submenu .dropdown-menu li a::before {
-	background: #44dd61;
+	background: #27a79a;
 }
+
 .main_menu .navbar-default .navbar-collapse .navbar-nav li.submenu .dropdown-menu li a {
-	color: #44dd61;
+	
+	color: #27a79a;
 }*/
