--- a/css/style.css
+++ b/css/style.css
@@ -485,10 +485,12 @@ margin: auto;
 }
 
 
+
 .social_icon li {
   
 	display: inline-block;
-  margin-right: 20px;
+  
+	margin-right: 20px;
 }
 
 
@@ -496,14 +498,20 @@ margin: auto;
   
 	height: 40px;
   width: 40px;
-  text-align: center;
-  border: 1px solid #677fb5;
-  display: block;
+  
+	text-align: center;
+  
+	border: 1px solid #677fb5;
+  
+	display: block;
   line-height: 40px;
-  font-size: 18px;
+  
+	font-size: 18px;
   border-radius: 5px;
-  transition: all 400ms linear 0s;
-  color: #677fb5;
+  
+	transition: all 400ms linear 0s;
+  
+	color: #677fb5;
 }
 
 
@@ -515,99 +523,114 @@ margin: auto;
 
 
 .social_icon li:nth-child(2):hover a {
-  background: #70c2e9;
+  
+	background: #70c2e9;
 }
 
 
 .social_icon li:nth-child(3) a {
-  color: #895a4d;
+  
+	color: #895a4d;
   border-color: #895a4d;
 }
 
 
 .social_icon li:nth-child(3):hover a {
-  background: #895a4d;
+  
+	background: #895a4d;
 }
 
 
 .social_icon li:nth-child(4) a {
-  color: #d34836;
+  
+	color: #d34836;
   border-color: #d34836;
 }
 
 
 .social_icon li:nth-child(4):hover a {
-  background: #d34836;
+  
+	background: #d34836;
 }
 
 
 .social_icon li:nth-child(5) a {
-  color: #007ab9;
+  
+	color: #007ab9;
   border-color: #007ab9;
 }
 
 
 .social_icon li:nth-child(5):hover a {
-  background: #007ab9;
+  
+	background: #007ab9;
 }
 
 
 .social_icon li:nth-child(6) a {
-  color: #d8545d;
+  
+	color: #d8545d;
   border-color: #d8545d;
 }
 
 
 .social_icon li:nth-child(6):hover a {
-  background: #d8545d;
+  
+	background: #d8545d;
 }
 
 
 .social_icon li:nth-child(7) a {
-  color: #5ecbf3;
+  
+	color: #5ecbf3;
   border-color: #5ecbf3;
 }
 
 
 .social_icon li:nth-child(7):hover a {
-  background: #5ecbf3;
+  
+	background: #5ecbf3;
 }
 
 
 .social_icon li:nth-child(8) a {
-  color: #ff3ba4;
+  
+	color: #ff3ba4;
   border-color: #ff3ba4;
 }
 
 
 .social_icon li:nth-child(8):hover a {
-  background: #ff3ba4;
+  
+	background: #ff3ba4;
 }
 
 
 .social_icon li:last-child {
-  margin-right: 0px;
+  
+	margin-right: 0px;
 }
 
 
 .social_icon li:last-child a {
-  color: #faaa5e;
+  
+	color: #faaa5e;
   border-color: #faaa5e;
 }
 
 
 .social_icon li:last-child:hover a {
-  background: #faaa5e;
+  
+	background: #faaa5e;
 }
 
 
 .social_icon li:hover a {
-  background: #677fb5;
+  
+	background: #677fb5;
   color: #fff;
 }
 
-
-/* End About Person area css============================================================================================ */
 
 
 /*---------------------------------------------------- */
@@ -623,12 +646,16 @@ margin: auto;
 	display: block;
   
 	background: #27a79a;
-  text-align: center;
-  line-height: 40px;
+  
+	text-align: center;
+  
+	line-height: 40px;
   
 	border-radius: 20px;
-  color: #222222;
-  font-size: 18px;
+  
+	color: #222222;
+  
+	font-size: 18px;
   
 	font-family: "Raleway";
   
@@ -642,7 +669,8 @@ margin: auto;
   
 	display: inline-block;
   width: 100%;
-  -webkit-backface-visibility: hidden;
+  
+	-webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   
 	height: 100%;
@@ -655,13 +683,15 @@ margin: auto;
   
 	content: "\f019";
   position: absolute;
-  height: 100%;
+  
+	height: 100%;
   width: 100%;
   text-align: center;
   line-height: 40px;
   font-size: 18px;
   color: #222222;
-  top: -100%;
+  
+	top: -100%;
   left: 0px;
   font-family: FontAwesome;
   transition: all 200ms ease-in;
@@ -669,16 +699,24 @@ margin: auto;
 
 
 .download_btn:hover span {
-  -webkit-transform: translateY(300%);
-  -ms-transform: translateY(300%);
-  transform: translateY(300%);
+  
+	-webkit-transform: translateY(300%);
+  
+	-ms-transform: translateY(300%);
+  
+	transform: translateY(300%);
 }
 
 
 .download_btn:hover:before {
-  top: 0px;
+  
+	top: 0px;
 }
 
+
+
+/* contact BTN area css
+============================================================================================ */
 
 .contact_btn {
   
@@ -686,7 +724,8 @@ margin: auto;
   display: block;
   line-height: 40px;
   color: #fff;
-  font-family: "Raleway", sans-serif;
+  
+	font-family: "Raleway", sans-serif;
   box-shadow: none !important;
   outline: none !important;
   border: none;
@@ -701,28 +740,35 @@ margin: auto;
 
 
 .contact_btn span {
-  display: inline-block;
+  
+	display: inline-block;
   width: 100%;
   -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
+  
+	backface-visibility: hidden;
   height: 100%;
   transition: all 400ms linear 0s;
 }
 
 
 .contact_btn:before {
-  content: "\f1d8";
-  position: absolute;
+  
+	content: "\f1d8";
+  
+	position: absolute;
   height: 100%;
   width: 100%;
-  text-align: center;
+  
+	text-align: center;
   line-height: 40px;
   font-size: 18px;
-  color: #fff;
+  
+	color: #fff;
   top: -100%;
   left: 0px;
   font-family: FontAwesome;
-  transition: all 200ms ease-in;
+  
+	transition: all 200ms ease-in;
 }
 
 
