--- a/css/style.css
+++ b/css/style.css
@@ -1038,7 +1038,7 @@ margin: auto;
 
 .service_area {
   
-	background: #fff;
+	background: #27a79a;
   
 	padding: 0px 0px 0px 0px;
 }
@@ -1073,6 +1073,23 @@ margin: auto;
 
 
 .service_area .service_inner .service_item j {
+  
+	height: 62px;
+  width: 62px;
+  line-height: 60px;
+  
+	border-radius: 50%;
+  background: #efefef;
+  
+	border: 2px solid #222222;
+  font-size: 30px;
+  color: #222222;
+  
+	transition: all 300ms linear 0s;
+}
+
+
+.service_area .service_inner .service_item q {
   
 	height: 62px;
   width: 62px;
@@ -1129,6 +1146,16 @@ margin: auto;
 .service_inner .service_item:hover j {
   
 	background: linear-gradient(to right, red, yellow, green, blue, purple);
+  
+	border-color: #efefef;
+  
+	color: #fff;
+}
+
+
+.service_inner .service_item:hover q {
+  
+	background: #BA55D3;
   
 	border-color: #efefef;
   
