tryign to change line

--- a/css/style.css
+++ b/css/style.css
@@ -945,7 +945,7 @@ margin: auto;
 .education_area .education_inner_area .education_item:after {
   
 	content: "";
-  background: #f7da7b;
+  background: #29B2A4;
   height: 4px;
   position: absolute;
   
