get rid of ugly blue

--- a/css/style.css
+++ b/css/style.css
@@ -644,7 +644,7 @@ margin: auto;
   
 	display: inline-block;
   
-	background-color: blue;
+	background-color: transparent;
 
 	border-color: black;
 	border-width: 100px;  
