--- a/css/style.css
+++ b/css/style.css
@@ -284,31 +284,33 @@ margin: auto;
   
 	background: transparent;
  
-	margin: 0px;
+	margin: 10px;
 }
 
 
 .header_area .navbar.navbar-default .navbar-header .navbar-brand {
   
-	padding: 0;
+	padding: 0px;
   
 	display: block;
   
 	vertical-align: middle;
   
-	line-height: 50px;
+	line-height: 0px;
 }
 
 
 .header_area .navbar.navbar-default .navbar-header .navbar-brand img {
   
 	display: inline-block;
+	max-width:60%;
+    	height:auto;
 }
 
 
 .header_area .navbar.navbar-default .navbar-collapse .nav.navbar-nav li {
   
-	margin-right: 40px;
+	margin-right: 30px;
 }
 
 
@@ -318,7 +320,7 @@ margin: auto;
   
 	background: transparent;
   
-	line-height: 120px;
+	line-height: 50px;
   
 	font-family: "Raleway", sans-serif;
   
@@ -337,9 +339,7 @@ margin: auto;
 
 .navbar-collapse 
 
-.nav.navbar-nav li:hover a, .header_area .navbar.navbar-default 
-
-.navbar-collapse .nav.navbar-nav li.active a {
+.nav.navbar-nav li:hover a, .header_area .navbar.navbar-default .navbar-collapse .nav.navbar-nav li.active a {
   
 	color: #fff;
 }
@@ -1075,7 +1075,7 @@ margin: auto;
 
 .service_area .service_inner .service_item:hover i {
   
-	background: #222222;
+	background: radial-gradient(#69a3c9, black);
   
 	border-color: #efefef;
   
@@ -1123,7 +1123,7 @@ margin: auto;
 
 .service_inner .service_item:hover r {
   
-	background: linear-gradient(to left, black, #69a3c9);
+	background: linear-gradient(to right, black, #69a3c9);
   
 	border-color: #efefef;
   
